fixed some small bugs with annotation dumpers; removed some old production nodes

--- a/update/staging/README
+++ b/update/staging/README
@@ -93,10 +93,11 @@ END : load genomic gff databases; in 0 days, 22 hours, 58 minutes and 28 seconds
 ./steps/adjust_symlinks.pl --release $RELEASE --target development
 
 # Tag software:
-shell> cd /path/to/your/repository
-shell> git branch --track WSXXX origin/master
-shell> git checkout WSXXX
-shell> git push origin WSXXX
+# No longer using
+#shell> cd /path/to/your/repository
+#shell> git branch --track WSXXX origin/master
+#shell> git checkout WSXXX
+#shell> git push origin WSXXX
 
 
 # 14. Begin precaching content
